force-app/main/default/objects/Opportunity/fields/Requiere_rendicion_Administrativa__c.field-meta.xml
<CustomField>
    <fullName>Requiere_rendicion_Administrativa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere rendición Administrativa</label>
    <type>Checkbox</type>
</CustomField>