force-app/main/default/objects/Opportunity/fields/Tipo_de_Tarjeta_DO__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tarjeta_DO__c</fullName>
    <label>Tipo de Tarjeta DO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Visa Débito</fullName>
            </value>
            <value>
                <fullName>Mastercard Débito</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Tarjeta MercadoPago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>