force-app/main/default/objects/Opportunity/fields/Trabajo_en_una_organizacion_social__c.field-meta.xml
<CustomField>
    <fullName>Trabajo_en_una_organizacion_social__c</fullName>
    <label>Trabajo en una organización social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>