force-app/main/default/objects/Opportunity/fields/Transaccion_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Transaccion_Gateway__c</fullName>
    <label>Transacción (Gateway)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MercadoPago</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>