force-app/main/default/objects/Opportunity/recordTypes/Proyecto_Donacion.recordType-meta.xml
<RecordType>
    <fullName>Proyecto_Donacion</fullName>
    <active>true</active>
    <businessProcess>NPSP_Default</businessProcess>
    <description>Registro para el proyecto de donaciones.</description>
    <label>Proyecto Donación</label>
</RecordType>